@@ -1393,7 +1393,7 @@ void GC_CALLBACK warn_proc(char *msg, GC_word p)
                        WINMAIN_LPTSTR cmd, int n)
 #elif defined(RTEMS)
 # include <bsp.h>
-# define CONFIGURE_APPLICATION_DOES_NOT_NEED_CLOCK_DRIVER
+# define CONFIGURE_APPLICATION_NEEDS_CLOCK_DRIVER
 # define CONFIGURE_APPLICATION_NEEDS_CONSOLE_DRIVER
 # define CONFIGURE_RTEMS_INIT_TASKS_TABLE
 # define CONFIGURE_MAXIMUM_TASKS 1
