@@ -1,3 +1,14 @@
+2011-05-19  Ivan Maidanski  <ivmai@mail.ru> (really Jie Liu)
+
+	* include/private/gcconfig.h (end, InitStackBottom): Declare
+	extern variable for RTEMS.
+	* include/private/gcconfig.h (DATASTART, DATAEND, STACKBOTTOM):
+	Update (for RTEMS).
+	* include/private/gcconfig.h (DATAEND): Fix a typo in the macro
+	name (for RTEMS).
+	* tests/test.c (CONFIGURE_APPLICATION_DOES_NOT_NEED_CLOCK_DRIVER):
+	Replace with CONFIGURE_APPLICATION_NEEDS_CLOCK_DRIVER (for RTEMS).
+
 2011-05-18  Ivan Maidanski  <ivmai@mail.ru>
 
 	* include/private/gcconfig.h (MPROTECT_VDB): Enable for Solaris in
